# basketball-mm

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/conf.d/: app.conf
backend/: .env  .env-non-dev  Dockerfile  README.md  docker-compose.yaml  prometheus.yml
backend/docker/: app.sh  oauth.py
backend/images/team/: avatar6
backend/images/user/: avatar(1, 'кот мечник.png')
backend/migrations/: env.py
backend/migrations/versions/: 072245ef6f70_.py  0ef6134abf07_.py  133b76879e2f_.py  2d1c1967275c_.py  33dfa957dfec_.py  41722d549a63_.py  (+23 more)
backend/requirements/: dev.txt  test.txt
backend/src/: config.py  constants.py  database.py  dev.txt  main.py  my_type_notation.py  producer.py  pytest.ini  redis_config.py  utils.py
frontend/js/: createTeam.js  getUserData.js  login.js  modal.js  register.js  sharedWorker.js  solo.js  user.js
frontend/styles/: styles.css
frontend/templates/: createTeam.html  index.html  ladder.html  login.html  match.html  profile.html  reg.html  searchMatch.html  team.html
match-bot/: .env  .env-non-dev  Dockerfile  pyproject.toml  requirements.txt
match-bot/src/: app.py  config.py  redis_config.py  utils.py
match-bot/src/database/: engine.py  models.py  orm_query.py
match-bot/src/handlers/: auth.py
match-bot/src/kbds/: reply.py
ml/: NNRINH.ipynb  README.md
проект/: authorization.js  index.html  main.css  match_page.html  new_page.html  procrutka.js  register-logic.js  registr.css  registration.html
(+63 files in other folders)
